--- a/voting-app/package.json
+++ b/voting-app/package.json
@@ -14,6 +14,9 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.19.2",
+        "mysql": "^2.18.1",
+        "reflect-metadata": "^0.2.2",
+        "typeorm": "^0.3.20",
         "uuid": "^10.0.0",
         "zod": "^3.23.8"
     },
